[package]
name = "libdvb-rs"
version = "0.4.5"
description = "Safer and feature-complete pure-Rust interface for DVB-API v5 devices in Linux"
authors = ["Cesbo Developers Team <info@cesbo.com>", "Daniil Gentili <daniil@daniil.it>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/libdvb"
repository = "https://github.com/cesbo/libdvb"
keywords = ["dvb", "ts"]
categories = ["api-bindings", "hardware-support"]
edition = "2018"

[dependencies]
nix = "^0.23"
anyhow = "^1.0"
strum = { version = "^0.23", features = ["derive"] }
bitflags = "^1.3.2"
itertools = "^0.10.2"
